# csd_peak_identifier

./: .gitignore  PLAN.md  USER_GUIDE.md  app.py  installer.nsi  main_v2.py  party-status.json  pyproject.toml
.github/workflows/: main.yml
csd_peak_identifier/: PLAN.md  coordinator.py  logic.py  main.py
csd_peak_identifier/files/: client.py  csd_file.py
csd_peak_identifier/gui/: analysis_dashboard.py  canvas.py  constants.py  cross_eval_dialog.py  dialogs.py  evaluation_mode_dialog.py  main_window.py  open_dialog.py  panels.py  peak_parameters_dialog.py  preferences_dialog.py  profile_dialog.py  styles.py  welcome_dialog.py
csd_peak_identifier/utils/: consensus.py  database.py  remote_db.py  updater.py
