[tool.poetry]
name = "csd-peak-identifier"
version = "0.1.0"
description = "A PySide6 GUI for identifying isotopes in ECR ion beam spectra."
authors = ["Jessica Rehak <rehak@lbl.gov>"]
packages = [{include = "csd_peak_identifier", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
PySide6 = "^6.0.0"
numpy = "*"
pandas = "*"
matplotlib = "*"
scipy = "*"
# Assuming it depends on the main package
"ops.ecris.analysis" = {path = "../ecris.analysis/", develop = true}

[tool.poetry.scripts]
csd-peak-identifier = "csd_peak_identifier.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
